# Neptune

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  README.md  docker-compose.yml  hydrophones  motor_client.py  pybullet.pyi  start_vnc.sh  websocket_client.py
.devcontainer/: devcontainer.json
.github/workflows/: cpp.yml  frontend.yml  lint.yml
Docker/: Dockerfile  docker-compose.yaml
Docs/: Citations.md  Docker.md  Find_EVO  Hydrophone_Test  Running.md
auv/: README.md  __init__.py  requirements.txt  startup.sh
auv/api/: abstract.py  gps.py  imu.py  imu_calibration.py  indicator.py  mock_controller.py  motor.py  motor_controller.py  ms5837.py  pid.py
auv/api/localization/: __init__.py  basic_quat.py  extended_filter.py  imu_test.py  main.py  test.py  unscented_quat.py
auv/core/: control.py  localization.py  main.py  navigation.py  perception.py  websocket_handler.py
auv/data/: config.yaml
auv/models/: data_types.py  shared_memory.py  tasks.py
auv/tests/: __init__.py  imu_calibration_test.py
auv/tests/localization/: imu_tester.py
auv/tests/localization/gps_test/: gps_sensor_test.py  main.py
auv/tests/mapping/: depth_cam.py
auv/tests/navigation/: gps_test.py  gps_test2.py
auv/tests/pid/: depth_test.py  heading_test.py  pitch_test.py
auv_cpp/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
auv_cpp/.github/workflows/: README.md  ci.yml
auv_cpp/api/: main.cpp  motor.hpp  motor_controller.hpp  stepper_motor.cpp  stepper_motor.hpp  winch.hpp
auv_cpp/data/: config.yaml
auv_cpp/src/control/: CMakeLists.txt  main.cpp
auv_cpp/src/core/: CMakeLists.txt  config.hpp  logger.hpp  rbtest.cpp  ring_buffer.hpp  time_utils.hpp  types.hpp
auv_cpp/src/messages/: CMakeLists.txt  messages.proto
auv_cpp/src/tasks/: task.hpp  thread_task.hpp  ws_server.hpp
auv_cpp/tests/: CMakeLists.txt
auv_cpp/tests/core/: CMakeLists.txt  rbtest.cpp  test_config  test_config.cpp  test_logger.cpp  test_thread_task.cpp  test_time_utils.cpp  test_types.cpp
base/: .gitignore  CMakeLists.txt  README.md  log_client.cpp  messages.pb.cc  messages.pb.h
neptune_sim/: CMakeLists.txt  package.xml
neptune_sim/launch/: simulate.launch.py
neptune_sim/udrf/: neptune.udrf.xacro
neptune_sim/worlds/: ocean.world
simulation/: main.py  requirments.txt  start.sh  start_motor.sh
simulation/controllers/neptune/: neptune.py
simulation/data/USV/: USV.urdf
simulation/scripts/: neptune.py
simulation/typings/mujoco/: __init__.pyi  _constants.pyi  _enums.pyi  _functions.pyi  _specs.pyi  _structs.pyi
simulation/worlds/: .Neptune-sim.wbproj  .neptune_fixed.wbproj  .neptune_outward.wbproj  Neptune-sim.wbt  neptune_meters.wbt
src/: .gitignore  CMakeLists.txt  main.cpp  neptune.hpp  sim_main.cpp  stepper_motor.hpp  winch.cpp
src/.cache/clangd/index/: main.cpp.CFA4094D571D4AF7.idx  main.cpp.DF2550DDC002DC0A.idx  motor.hpp.4E0D0D06D9407DCF.idx  platform_i2c.cpp.B9BFD2C1BBB86F7F.idx  test.cpp.29B4460915BA69B3.idx
src/comms/: tcp_server.hpp  ws.hpp
src/drivers/: CMakeLists.txt  imu.hpp  main.cpp  manual_test.cpp  motor.hpp  motor_old.hpp  noah_test.cpp  platform_i2c.cpp  platform_i2c.hpp  pool_test.cpp  rc_test.cpp  sim_motor.hpp  test.cpp  thruster.cpp  thruster.hpp  thruster_controller.hpp
src/drivers/common/: sim.hpp
src/drivers/gps/: gps.hpp  hardware_gps.hpp  simulated_gps.hpp
src/drivers/imu/: imu.hpp  imuTest.cpp  platform_i2c.cpp  platform_i2c.hpp
src/drivers/motors/: motor.cpp  motor.hpp  noah_test.cpp  sim_motor.cpp  sim_motor.hpp  thruster.cpp  thruster.hpp
src/drivers/server/: motor_server.cpp
src/states/: idle.hpp  navigate.hpp  state.hpp
src/tests/: thruster.cc
src/types/: GPSCoordinate.hpp  MotorLocation.hpp
web_app/: README.md  __init__.py  backend.py  build.sh  build_win.bat  requirements.txt  startup.sh  startup_win.bat  video.py
web_app/data/: config.yaml  gui_layouts.json
web_app/frontend_gui/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
web_app/frontend_gui/public/: fonts.css  main.css
web_app/frontend_gui/src/: App.tsx  Grid.tsx  index.tsx  types.ts
web_app/frontend_gui/src/inputs/: Forms.tsx  SocketHealth.module.css  SocketHealth.tsx  TaskManager.module.css  TaskManager.tsx  forms.module.css
web_app/frontend_gui/src/outputs/: map.tsx  sim.tsx  status.module.css  status.tsx  video.module.css  video.tsx
web_app/frontend_gui/src/utils/: icons.tsx
web_app/radio_setup/: .gitignore  README.md  radio.m  radio.py  radio.sh
