<?xml version="1.0"?>
<package format="3">
  <name>neptune_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for Neptune AUV</description>
  <maintainer email="team@neptune.local">Neptune Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>